<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookKeeper</string>
    <string name="action_settings">Settings</string>
    
    <string name="isbn">ISBN: </string>
	<string name="search">Search ISBN</string>
	<string name="add_book">Add Book</string>
	<string name="title">Title</string>

	<string name="books_title">Books</string>
    <string name="add_button">ADD</string>
    <string name="az">A to Z</string>
    <string name="za">Z to A</string>    
    
    <string name="save_data">Save</string>
    
    <string name="edit_book_title">Edit Book</string>
    <string name="edit_button">Update</string>
    <string name="delete_button">Delete</string>
</resources>
